# 42

./: .gitmodules  README.md  script.py
Get_Next_Line/: CMakeLists.txt  README.md
Get_Next_Line/get_next_line/: get_next_line  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c  removetests.sh  test.txt
Get_Next_Line/get_next_line/fsoares/: test1.out  test2.out  test3.out
Get_Next_Line/get_next_line/gnlTester/: Makefile
MiniTalk/: CMakeLists.txt
MiniTalk/minitalk/: Makefile  client  client_bonus  removetests.sh  server  server_bonus
MiniTalk/minitalk/bonus/: client_bonus.c  server_bonus.c
MiniTalk/minitalk/includes/: minitalk.h
MiniTalk/minitalk/lib/: Makefile
MiniTalk/minitalk/lib/char/: lib_char.h
MiniTalk/minitalk/lib/conversion/: ft_toupper.c
MiniTalk/minitalk/minitalk-Tester/: tester.sh
MiniTalk/minitalk/srcs/: client.c  server.c
MiniTalk/testers/minitalk-Tester/: tester.sh  tester_bonus.sh
Minishell/: CMakeLists.txt  Escopo do projeto Minishell  av-minishell  prompt gpt
Minishell/Gabriel/: CMakeLists.txt  Makefile  minishell  minishell.h  minishell_bonus.h
Minishell/Gabriel/libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  (+5 more)
Minishell/Gabriel/srcs/: main.c
Minishell/Gabriel/srcs/builtins/: cd.c  echo.c  env.c  exit.c  export.c  pwd.c  unset.c
Minishell/Gabriel/srcs/executor/: executor.c  path.c  pipe.c
Minishell/Gabriel/srcs/parser/: lexer.c  parser.c  quotes.c  redirect.c  tokens.c
Minishell/Gabriel/srcs/signals/: signals.c
Minishell/Gabriel/srcs/srcs_bonus/: operators_bonus.c  wildcard_bonus.c
Minishell/Gabriel/srcs/utils/: env_utils.c  error.c  free.c  init.c
Minishell/Joao/: CMakeLists.txt  valgrind.sh  valgrind.supp
My_Lib/: CMakeLists.txt  Makefile
My_Lib/lib/: Makefile
My_Lib/lib/conversion/: lib_conversion.h
My_Lib/lib/include/: lib_print.h
My_Lib/lib/includes/: lib_list.h  lib_memory.h  libft.h
My_Lib/lib/list/: ft_lstmap_bonus.c
My_Lib/lib/memory/: realloc.c
My_Lib/lib/objects/: Makefile
My_Lib/lib/src/char/: ft_isalnum.c
My_Lib/lib/src/conversion/: ft_atoi.c
My_Lib/lib/src/gnl/: get_next_line.c
My_Lib/lib/src/list/: ft_lstdelone_bonus.c  lstdel_safely.c  lstnew_int.c
My_Lib/lib/src/memory/: realloc.c
My_Lib/lib/src/string/: ft_striteri.c  ft_strncmp.c  strcpy.c
My_Lib/lib/srcs/char/: ft_isascii.c  ft_isdigit.c
My_Lib/lib/srcs/conversion/: atoll_valid.c  ft_atoi.c  ft_itoa.c  ft_tolower.c  ft_toupper.c
My_Lib/lib/srcs/ft_printf/: long_to_hex.c  print_chars.c  print_n_string.c  utils.c
My_Lib/lib/write/: ft_putstr_fd.c
My_Lib/lib_2.0/: CMakeLists.txt  Makefile
My_Lib/lib_2.0/includes/: ft_printf.h  lib_list.h  lib_memory.h  lib_string.h
My_Lib/libft/: Makefile
My_Lib/libft/includes/: ft_strmanp.h
New_Get_Next_Line/: CMakeLists.txt  get_next_line.drawio
New_Get_Next_Line/get_next_line/: README.md  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c
Philosophers/: CMakeLists.txt
Philosophers/dpetrosy_philo/philo/: philo
Philosophers/m4nb3ll_philo/: main.c  philo  philo_utils.c
Philosophers/m4nb3ll_philo/42-philosophers-tester/: test.sh
Philosophers/m4nb3ll_philo/Tester_philosophers/: test.sh
Philosophers/philo/: CMakeLists.txt  Makefile  philo
Philosophers/philo/include/: colour.h  error.h  philosophers.h  util.h
Philosophers/philo/src/: atoi_v.c  error.c  exit.c  init.c  main.c  monitor.c  routine.c  routine_util.c  time.c
Philosophers/philo_bonus/: CMakeLists.txt  Makefile  philo_bonus
Philosophers/philo_bonus/include/: philo_bonus.h  util.h
Philosophers/philo_bonus/src/: error.c  exit.c  fork.c  init.c  main.c  philo.c  util.c
Philosophers/philosophers/: Makefile  philo  philo_bonus
Philosophers/philosophers/philo/: Makefile  philo  removetests.sh
PushSwap/: CMakeLists.txt  PushSwap.drawio
PushSwap/old_pushswap/: Makefile  imgui.ini  tester.sh
PushSwap/old_pushswap/includes/: operations.h  push_swap.h  sort.h  test.h
PushSwap/old_pushswap/libft/: Makefile
PushSwap/old_pushswap/srcs/: checks.c  main.c  ranges.c  tab.c  test.c  utils.c
PushSwap/pushswap/: Makefile  checker  imgui.ini  lib  push_swap
PushSwap/pushswap/bonus/: checker_bonus.c  checker_bonus.h
PushSwap/pushswap/includes/: ft_stacks.h  operations.h  push_swap.h  quicksort.h  test.h
PushSwap/pushswap/libft/: Makefile
PushSwap/pushswap/srcs/: input.c  input_check.c  input_get.c  main.c  ops_list.c  ps_utils.c  push_swap.c  quartiles.c  ranges.c  sort.c  sort_small.c  tab.c  test.c  utils.c
Rank1/Get_Next_Line/get_next_line/: CMakeLists.txt  get_next_line_utils_bonus.c
Rank1/Printf/printf_no_bonus/: CMakeLists.txt
So_Long/: CMakeLists.txt
So_Long/so_long/: Makefile  Tester_so_long.sh  main.c  penis.ber  so_long  so_long_bonus
So_Long/so_long/assets/: asteroid.xpm  blackhole.xpm  collectible-resized.xpm  eight.xpm  exit-resized.xpm  five.xpm  floor-resized.xpm  four.xpm  letter_e.xpm  letter_i.xpm  letter_m.xpm  letter_n.xpm  letter_o.xpm  letter_r.xpm  letter_s.xpm  letter_space.xpm  letter_u.xpm  letter_v.xpm  letter_y.xpm  nine.xpm  one.xpm  player-resized.xpm  seven.xpm  six.xpm  space.xpm  spaceship_down.xpm  spaceship_left.xpm  spaceship_right.xpm  spaceship_up.xpm  star.xpm  three.xpm  two.xpm  wall-resized.xpm  zero.xpm
So_Long/so_long/include/: error_codes.h  event.h  game.h  map.h  so_long.h
So_Long/so_long/libs/: mylib
So_Long/tests/: removetests.sh
(+951 files in other folders)
