cmake_minimum_required(VERSION 3.30)
project(Minishell_Gabriel C)

set(CMAKE_C_STANDARD 11)

add_executable(Minishell_Gabriel
		libft/ft_atoi.c
		libft/ft_bzero.c
		libft/ft_calloc.c
		libft/ft_isalnum.c
		libft/ft_isalpha.c
		libft/ft_isascii.c
		libft/ft_isdigit.c
		libft/ft_isprint.c
		libft/ft_itoa.c
		libft/ft_lstadd_back_bonus.c
		libft/ft_lstadd_front_bonus.c
		libft/ft_lstclear_bonus.c
		libft/ft_lstdelone_bonus.c
		libft/ft_lstiter_bonus.c
		libft/ft_lstlast_bonus.c
		libft/ft_lstmap_bonus.c
		libft/ft_lstnew_bonus.c
		libft/ft_lstsize_bonus.c
		libft/ft_memchr.c
		libft/ft_memcmp.c
		libft/ft_memcpy.c
		libft/ft_memmove.c
		libft/ft_memset.c
		libft/ft_putchar_fd.c
		libft/ft_putendl_fd.c
		libft/ft_putnbr_fd.c
		libft/ft_putstr_fd.c
		libft/ft_split.c
		libft/ft_strchr.c
		libft/ft_strdup.c
		libft/ft_striteri.c
		libft/ft_strjoin.c
		libft/ft_strlcat.c
		libft/ft_strlcpy.c
		libft/ft_strlen.c
		libft/ft_strmapi.c
		libft/ft_strncmp.c
		libft/ft_strnstr.c
		libft/ft_strrchr.c
		libft/ft_strtrim.c
		libft/ft_substr.c
		libft/ft_tolower.c
		libft/ft_toupper.c
		libft/libft.h
		libft/Makefile
		srcs/builtins/cd.c
		srcs/builtins/echo.c
		srcs/builtins/env.c
		srcs/builtins/exit.c
		srcs/builtins/export.c
		srcs/builtins/pwd.c
		srcs/builtins/unset.c
		srcs/executor/executor.c
		srcs/executor/path.c
		srcs/executor/pipe.c
		srcs/parser/lexer.c
		srcs/parser/parser.c
		srcs/parser/quotes.c
		srcs/parser/redirect.c
		srcs/parser/tokens.c
		srcs/signals/signals.c
		srcs/srcs_bonus/operators_bonus.c
		srcs/srcs_bonus/wildcard_bonus.c
		srcs/utils/env_utils.c
		srcs/utils/error.c
		srcs/utils/free.c
		srcs/utils/init.c
		srcs/main.c
		Makefile
		minishell.h
		minishell_bonus.h)
